--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+logs                # Log directory
+*.log               # Log files
+npm-debug.log*      # npm debug logs
+yarn-debug.log*     # yarn debug logs
+yarn-error.log*     # yarn error logs
+pnpm-debug.log*     # pnpm debug logs
+lerna-debug.log*    # lerna debug logs
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependency directories
+node_modules        # Node.js modules
+
+# Build output
+dist                # Distribution folder
+dist-ssr            # Server-side rendering build output
+*.local             # Local environment files
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.vscode/*           # VS Code settings
+!.vscode/extensions.json  # Allow extensions.json to be tracked
+.idea               # JetBrains IDE settings
+.DS_Store           # macOS Finder metadata
+*.suo               # Visual Studio solution user options
+*.ntvs*             # Node.js Tools for Visual Studio files
+*.njsproj           # Node.js project files for Visual Studio
+*.sln               # Visual Studio solution files
+*.sw?               # Swap files (e.g., .swa, .swp)
