--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,23 @@
-# Logs
-logs                # Log directory
-*.log               # Log files
-npm-debug.log*      # npm debug logs
-yarn-debug.log*     # yarn debug logs
-yarn-error.log*     # yarn error logs
-pnpm-debug.log*     # pnpm debug logs
-lerna-debug.log*    # lerna debug logs
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependency directories
-node_modules        # Node.js modules
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Build output
-dist                # Distribution folder
-dist-ssr            # Server-side rendering build output
-*.local             # Local environment files
+# testing
+/coverage
 
-# Editor directories and files
-.vscode/*           # VS Code settings
-!.vscode/extensions.json  # Allow extensions.json to be tracked
-.idea               # JetBrains IDE settings
-.DS_Store           # macOS Finder metadata
-*.suo               # Visual Studio solution user options
-*.ntvs*             # Node.js Tools for Visual Studio files
-*.njsproj           # Node.js project files for Visual Studio
-*.sln               # Visual Studio solution files
-*.sw?               # Swap files (e.g., .swa, .swp)
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
